...
    <string name="post_edit">Edit Message</string>
    <string name="post_delete">Delete Post</string>
    <string name="post_copy_text">Copy Text</string>
    <string name="post_reply">Reply in Thread</string>
    <string name="post_resolves">Resolves Post</string>
    <string name="post_does_not_resolve">Doesn\'t Resolve Post</string>
    <string name="post_pin">Pin Post</string>
    <string name="post_unpin">Unpin Post</string>
    <string name="post_save">Save Post</string>
    <string name="post_unsave">Remove Bookmark</string>
    <string name="post_is_resolved">Resolved</string>
    <string name="post_is_pinned">Pinned</string>
    <string name="post_is_saved">Saved for later</string>

    <string name="post_replies_count">%d Replies</string>
    <plurals name="post_replies_count">
        <item quantity="one">%d Reply</item>
        <item quantity="other">%d Replies</item>
...
